# irrexplorer

./: .bandit  .dockerignore  .env.example  .gitignore  .isort.cfg  AGENTS.md  CHANGELOG.md  CI_CD.md  DATA_SOURCES.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  Dockerfile.frontend  Dockerfile.go-backend  GO_BACKEND_MIGRATION.md  INSTALLATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_SUMMARY.md  README.md  ROADMAP.md  SECURITY_CONFIGURATION.md  SECURITY_WORKFLOW.md  TEST_ISSUES.md  check_network_usage.sh  docker-compose.dev.yml  docker-compose.yml  install.sh  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  security.yml
bgpalerter/: API_INTEGRATION.md  INSTALL_NATIVE.md  README.md  config.yml  entrypoint.sh  prefixes.yml
charts/irrexplorer/: Chart.yaml  values.example.yaml  values.ws-acc.yaml  values.yaml
docs/: USER_GUIDE.md
frontend/: OPTIMIZATION.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.js  App.tsx  config.json  index.css  main.tsx  vite-env.d.ts
go-backend/: .gitignore  go.mod  go.sum
irrexplorer/: app.py  conftest.py  settings.py  state.py
irrexplorer/api/: advanced_search.py  analysis.py  bgp_admin.py  bgp_auth.py  bgp_helpers.py  bgp_user_management.py  bgpalerter_management.py  bgpalerter_manager.py  cache_warmer.py  caching.py  collectors.py  datasources.py  export.py  interfaces.py  openapi.py  report.py  (+5 more)
scripts/: import_data_cron.sh
tests/: test_datasources.py
(+192 files in other folders)
