[project]
name = "irrexplorer"
version = "1.5.0"
description = "IRR explorer"
authors = [{name = "Sasha Romijn", email = "github@mxsasha.eu"}]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.9"

# Dependencies are now managed in requirements.txt and requirements-dev.txt
# This allows using uv (10-100x faster than Poetry) for installations

[project.scripts]
reformat = "scripts:reformat"
lint = "scripts:lint"
frontend-build = "scripts:frontend_build"
frontend-install = "scripts:frontend_install"
import-data = "scripts:import_data"
http = "scripts:run_http"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == '__main__':",
]

omit = [
    "irrexplorer/storage/migrations/versions/*",
]
